k8s/two-tier-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-service
spec:
  selector:
    app: two-tier-app
    type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
