k8s/two-tier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-app
  namespace: assignment
    #  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 135.235.144.72.abc.io
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: two-tier-app-service
            port:
              number: 80
